--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Home | Schoology</title>
+	<link rel="shortcut icon" type="image/x-icon" href="https://cdnsm5-ss11.sharpschool.com/UserFiles/Servers/Server_141067/Image/sgy%20logo%20resized.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- header font -->
   <link href="//fonts.googleapis.com/css?family=Orbitron" rel="stylesheet" type="text/css">
